# kbmodel

./: .gitignore  Cargo.toml  README.md  config.toml  languages_default.cfg
oxeylyzer-core/: Cargo.toml
oxeylyzer-core/src/: corpus_transposition.rs  data_dir.rs  generic.rs  language_data.rs  lib.rs  load_text.rs  translation.rs  type_def.rs
oxeylyzer-core/src/config/: config.rs  finger_to_column.rs  info.rs  mod.rs  pins.rs
oxeylyzer-core/src/config/weights/: alternates.rs  bias.rs  bigrams.rs  fingers.rs  mod.rs  redirects.rs  rolls.rs  weights.rs
oxeylyzer-core/src/hand/: finger.rs  hand.rs  mod.rs
oxeylyzer-core/src/language/: language_data.rs  mod.rs  parse_language_cfg.rs  text_data.rs  text_n_grams.rs  text_ngrams.rs  trigram_patterns.rs
oxeylyzer-core/src/layout/: keyboard_type.rs  layout.rs  layout_cache.rs  layout_generation.rs  mod.rs
oxeylyzer-core/src/n_gram/: bigram_type.rs  effort_type.rs  mod.rs  n_gram.rs  n_gram_stats.rs  trigram_type.rs
oxeylyzer-core/src/ngram/: bigram_type.rs  mod.rs  ngram.rs
oxeylyzer-core/src/stat/: layout_stats.rs  mod.rs  trigram.rs  trigram_stats.rs
oxeylyzer-core/src/stats/: bigram_stats.rs  disjoint_stats.rs  effort_stats.rs  layout_cache.rs  layout_stats.rs  mod.rs  skip_stats.rs  trigram_stats.rs
oxeylyzer-core/src/utility/: converter.rs  extension.rs  generator.rs  heat_map.rs  mod.rs  ngram.rs  pair.rs  scorer.rs
oxeylyzer-repl/: Cargo.toml
oxeylyzer-repl/src/: flags.rs  lib.rs  repl.rs
static/layouts/english/: halmak.kb  really.kb
