[package]
name = "oxeylyzer-core"
version = "0.1.0"
edition = "2021"

[dependencies]
glob = "0.3.1"
toml = "0.8.19"
itertools = "0.13.0"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
nanorand = "0.7.0"
rayon = "1.10.0"
file-chunker = "0.1.1"
indexmap = { version = "2.3.0", features = ["serde"] }
once_cell = "1.19.0"
ansi_rgb = { git = "https://github.com/O-X-E-Y/ansi_rgb" }
smartstring = { git = "https://github.com/O-X-E-Y/smartstring", features = ["serde"] }
num-traits = "0.2.19"
num-derive = "0.4.2"
